# overmatch

./: .cursorignore  .gitignore  .lfsconfig  ARCHITECTURE.md  Cargo.toml  DEPLOY.md  HANDOFF-aim-intention-regression.md  HANDOFF-hsim-divergence.md  HANDOFF-mp-correctness.md  HANDOFF-mp-deploy.md  HANDOFF-opponent-fire.md  HANDOFF-upstream-determinism-wave-a.md  HANDOFF-wave-a-review.md  NOTES.md  README.md  ROADMAP.md
.agents/: AGENTS.md  CONTEXT.md  GLOSSARY.md  PRODUCT.md
.agents/docs/: domain.md  issue-tracker.md  triage-labels.md
.agents/docs/adr/: 0001-aim-stored-hull-local.md  0002-plugin-per-feature-architecture.md  0003-camera-is-the-aiming-device.md  0004-avian-physics.md  0005-raycast-roadwheel-locomotion.md  0006-static-friction-brush-anchor.md  0007-model-authored-data-via-skein.md  0008-collision-convex-proxies.md  0009-release-artifacts-and-repo-layout.md  0010-per-variant-data-in-ron.md  0012-spec-driven-rig-binder.md  0013-composable-rig-control.md  0014-sim-view-split.md  0015-divergence-doctrine.md  0016-replicate-causes-derive-consequences.md  0017-mutual-contact-resolves-on-the-authority.md  0018-wire-surface-fingerprinted-and-refused.md  0019-overlays-declare-presence-consequences-derive.md  0020-fire-mode-mechanism-enum.md  0021-fire-replication-architecture.md  0022-input-attestation-not-detection.md  0023-vfx-honesty-scaled-by-physics.md  0024-one-authoritative-runtime-for-player-facing-worlds.md  0025-belt-force-locomotion.md  0026-static-friction-strain-regime.md  0027-element-grip-netcode.md  0028-cross-architecture-bit-determinism-via-glam-scalar-math.md  0029-weapon-gate-is-tick-correlated-authority-state.md  0030-servo-pose-is-owner-reconciled.md
.agents/docs/design/: armor-penetration-and-damage.md  gunner-sight.md  lightyear-spike-log.md  lightyear-spike-map.md  lightyear-step7-map.md  nan-crash-research.md  nan-research-examples.md  nan-research-prediction.md  rig-ron-sot-and-composability.md  sim-divergence-and-determinism.md  sim-view-split-and-tank-bake.md  timelines-and-shear.md  weapon-groups-and-selection.md
.agents/docs/design/track-model/: HQ.md  architecture.md  contact-oracle-research.md  (+10 more)
.agents/scratch/: hsim-to-wave-a.md  wave-a-adoption-memo.md
.agents/scratch/playtest-forks/: README.md  friction-continuity.md  suspension-probe-shape.md
.agents/scratch/shooting-replication/: practitioner-consensus.md  transport-best-practices.md
.agents/scratch/upstream-reports/: README.md  avian-solver-constraint-order.md  lightyear-absent-anchor-input-freeze.md  lightyear-avian-blanket-apply-pos-to-transform.md  lightyear-avian-childof-not-replicated-transform-mode.md  lightyear-avian-restore-assumes-enlarged-aabb.md  lightyear-check-starvation.md  lightyear-confirmedhistory-seeding.md  lightyear-dual-marker-tiebreak.md  lightyear-native-input-encoder-inverted-range-oom.md  lightyear-sealed-correction-policy.md  parry-gjk-cast-relative-tolerance.md
.agents/scratch/wave-a-ab-records/: ab-avian.md  ab-lightyear.md  ab-parry.md  class3-incidence.md  rebaseline.md  review-avian.md  review-lightyear.md  review-parry.md
.agents/scratch/wave-a-filings/: parry.md
.agents/skills/ask-matt/: SKILL.md
.agents/skills/codebase-design/: DESIGN-IT-TWICE.md
.agents/skills/diagnosing-bugs/: SKILL.md
.agents/skills/domain-modeling/: CONTEXT-FORMAT.md  SKILL.md
.agents/skills/improve-codebase-architecture/: SKILL.md
.agents/skills/setup-matt-pocock-skills/: SKILL.md  domain.md
.agents/skills/tdd/: SKILL.md
.agents/skills/triage/: SKILL.md
.github/actions/build-server/: action.yml
.github/workflows/: bitprobe.yml  ci.yml  deploy.yml  release.yml  server-build.yml
assets/shaders/: vfx_billboard.wgsl  vfx_trail.wgsl
assets/shell/: cc.txt  shell.blend  shell.glb
assets/tiger_1/: cc.txt  mg34.cc.txt  tiger_1.blend  tiger_1.glb  tiger_1.tank.ron  tiger_1_components.blend
assets/vfx/: cc.txt
scripts/: build-linux.sh  gen-icons.sh  package-macos.sh
scripts/bitprobe/: README.md  diff.py
scripts/ci/: measure-test-memory.sh  run-test-with-memory.sh  shot-stress.Dockerfile
scripts/connect/: batch.sh
scripts/cost/: analyze.py  run.sh
scripts/disk/: README.md  com.overmatch.target-sweep.plist  sweep.sh
scripts/divergence/: analyze.py
scripts/hooks/: README.md  pre-commit  pre-push
scripts/jitter/: analyze.py  anatomy.py
scripts/shot/: analyze.py  run-mg-armor.sh  test_analyze.py
scripts/track/: analyze_steer.py  analyze_transmission.py  mark_link_stl.py
src/: aim.rs  assets.rs  bake.rs  ballistics.rs  bitprobe.rs  branding.rs  camera.rs  command.rs  cost.rs  crew_ui.rs  damage.rs  debug.rs  drive_hud.rs  driving.rs  firecontrol.rs  headless_test.rs  hud.rs  lib.rs  main.rs  net.rs  overlay.rs  sandbox.rs  shooting.rs  shot_trace.rs  sight.rs  spec.rs  state.rs  tank.rs  trace.rs  track.rs  track_sandbox.rs  ui_font.rs  vfx.rs  world.rs
src/driving/: contact.rs  susp_trace.rs  suspension.rs  traction.rs
src/net/: client.rs  contact_probe.rs  death_screen.rs  debug_hud.rs  diagnostics.rs  disclosure.rs  grip.rs  grip_battery.rs  harness.rs  hit_feel.rs  mod.rs  physics.rs  protocol.rs  render_error.rs  rig.rs  server.rs  shot_loss.rs  shot_transport.rs  test_harness.rs  watchdog.rs
src/net/grip/: authority.rs  checkpoint.rs  client.rs
src/suspension_editor/: derive.rs  mod.rs  model.rs
src/tank/: integrity.rs  model.rs  scenario.rs  servo.rs  spawn.rs  view.rs
src/trace/: state_hash.rs
src/track/: chain.rs  drive.rs  forces.rs  oracle.rs  route.rs  side.rs  sim.rs  terrain.rs  transmission.rs  view.rs  wheels.rs
src/track/transmission/: tests.rs
src/track_sandbox/: harness.rs  mod.rs  model1.rs  model2.rs  model3.rs  model4.rs
src/vfx/: billboard.rs  ember.rs  impact.rs  mod.rs  muzzle.rs  prewarm.rs  tracer.rs  trail.rs
tests/: gpu_layout.rs  net_boundary.rs  net_fire_release.rs  net_input_buffer_wrap.rs  net_interp_delay.rs  spherecast_scale.rs  ui_ascii.rs
upstream/: README.md  avian-enhanced-determinism-simd-reductions.md  bevy-uninitbuffervec-rust-size-vs-shader-stride.md
(+2 files in other folders)
