[package]
name = "overmatch"
version = "0.3.0-alpha.3"
edition = "2024"
default-run = "overmatch"

[dependencies]
bevy = { version = "0.19", features = ["debug"] }
# `serialize` adds the Serialize/Deserialize impls on Position/Rotation/velocities that lightyear's
# replication registration needs. Unconditional since the collapse of the `net` feature — it used to
# ride `net = [..., "avian3d/serialize"]`.
avian3d = { version = "0.7", features = ["serialize"] }

# Per-variant spec sheets are authored as RON data assets (ADR-0010): plain-text,
# git-diffable, deserialized straight into our components via serde.
serde = { version = "1", features = ["derive"] }
# The jitter-trace recorder (`src/trace.rs`) writes JSONL rows for offline analysis. Already in the
# tree transitively (via `gltf`), promoted to a direct dependency for the recorder's use.
serde_json = "1"
ron = "0.12"
# The same glam Bevy already compiles (feature unification) — this only switches on its serde
# impls, so `Vec3` can ride in the serializable `TankCommand`.
glam = { version = "0.30", features = ["serde"] }

winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

# Read a `.glb` directly as data (no Bevy scene): the sim/view-split geometry extractor (`bake`,
# design sim-view-split-and-tank-bake.md) and the spec↔model bind-contract test. Matches the
# version `bevy_gltf` already resolves, so it adds nothing to the dep tree.
gltf = "1.4"

# The netcode layer. The PVP client IS the product, so lightyear is an unconditional dependency —
# it compiles into every build (single-player returns as a runtime mode inside the client, not a
# compile variant; `tests/net_boundary.rs` keeps the sim layer from depending on it). `prediction`/
# `interpolation` are default-on lightyear features (kept explicit for clarity); `avian3d` pulls in
# `lightyear_avian3d` (increment 5, spike map §1/§5).
lightyear = { version = "0.28", default-features = false, features = [
    "std",
    "client", "server",
    "replication", "prediction", "interpolation",
    # The render half of prediction (fixed-tick→frame blending; also what arms rollback
    # correction). NOT implied by `prediction` — see net::client_smoothing_plugin.
    "frame_interpolation",
    "input_native",
    "netcode", "udp",
    "avian3d",
] }

# `dev_tools` (physics-debug gizmos + the `G`/`X`/`F` debug key bindings) is the one real compile
# gate: default-on, decoupled from `debug_assertions` so an optimized playtest build can still carry
# the tooling, and flipped off for a public beta. `net` used to be a second feature here; it was
# collapsed away once the product converged on the networked client (halving every gate run and
# build cache — the second dependency resolution is gone).
#
# `avian3d/serialize` is additive (Serialize/Deserialize impls on Position/Rotation/velocities) that
# lightyear's replication registration needs; unconditional now that lightyear always compiles.
[features]
default = ["dev_tools"]
# Player-facing debug tooling (physics wireframes + the `G`/`X`/`F` debug keys). Empty deps: it is a
# pure compile gate the code reads via `#[cfg(feature = "dev_tools")]`, kept separate from
# `debug_assertions` so it survives into optimized builds.
dev_tools = []

[[bin]]
name = "overmatch"
path = "src/main.rs"

# The dedicated server.
[[bin]]
name = "overmatch-server"
path = "src/bin/overmatch-server.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# CI profile: clippy (type-check) + fast unit tests only, which gain nothing from
# optimized dependencies. Inherit dev but drop every package back to opt-level 0 —
# the dev profile's opt-level-3 deps are exactly what make a cold CI build slow (~25
# min) and the rust-cache large (~1.5 GB). Used via `cargo {clippy,test} --profile ci`
# in .github/workflows/ci.yml.
[profile.ci]
inherits = "dev"
opt-level = 0

[profile.ci.package."*"]
opt-level = 0

# Optimized for distribution: strip symbols and shrink code size. These slow
# down compile time (full recompile + LTO), which is fine for release bundles.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
